--- a/DotNetCore.MVC/Views/Blog/BlogIndex.cshtml
+++ b/DotNetCore.MVC/Views/Blog/BlogIndex.cshtml
@@ -4,9 +4,11 @@
 		var count = 0;
 	}
 
-<h1>Hello this is Blog Page</h1>
 
-<table>
+<div class="container">
+<h1 class="text-center my-3">Hello this is Blog Page</h1>
+
+<table class="table table-striped table-bordered">
 	<thead>
 		<tr>
 			<td>No.</td>
@@ -26,3 +28,4 @@
 		}
 	</tbody>
 </table>
+</div>
