--- a/DotNetCore.MVC/Views/Blog/CreateBlog.cshtml
+++ b/DotNetCore.MVC/Views/Blog/CreateBlog.cshtml
@@ -11,6 +11,6 @@
 		<input class="form-control" name="blog_author" />
 		<label class="form-label">Content</label>
 		<input class="form-control" name="blog_content" />
-		<button type="submit" class="btn btn-outline-success">Add Blog</button>
+		<button type="submit" class="btn btn-outline-success mt-3">Add Blog</button>
 	</form>
 </div>
