--- a/DotNetCore.MVC/Views/Blog/BlogIndex.cshtml
+++ b/DotNetCore.MVC/Views/Blog/BlogIndex.cshtml
@@ -6,8 +6,10 @@
 
 
 <div class="container">
-<h1 class="text-center my-3">Hello this is Blog Page</h1>
+	<p class="bg-success border rounded text-center text-white">@TempData["Message"]</p>
+<h1 class="text-center my-3">Blog Page</h1>
 
+	<a href="/Blog/Create"><button class="btn btn-primary mb-3">Add New Blog</button></a>
 <table class="table table-striped table-bordered">
 	<thead>
 		<tr>
@@ -15,6 +17,7 @@
 			<td>Title</td>
 			<td>Author</td>
 			<td>Content</td>
+			<td>Action</td>
 		</tr>
 	</thead>
 	<tbody>
@@ -24,8 +27,20 @@
 				<td>@blog.blog_title</td>
 				<td>@blog.blog_author</td>
 				<td>@blog.blog_content</td>
+				<td>
+						<a href="/Blog/Edit/@blog.blog_id"><button class="btn btn-warning edit-btn" value="@blog.blog_id">Edit</button></a>
+						<a href="/Blog/Delete/@blog.blog_id"><button class="btn btn-danger delete-btn" value="@blog.blog_id">Delete</button></a>
+				</td>
 			</tr>
 		}
 	</tbody>
 </table>
 </div>
+
+@section scripts{
+	<script>
+		// ${".edit-btn"}.click(() => {
+
+		// })
+	</script>
+}
