feat: complete charts

--- a/DotNetCore.MVC/Views/Home/Index.cshtml
+++ b/DotNetCore.MVC/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4 mt-5">Welcome From My Charts Collection</h1>
+    <div class="flex justify-content-evenly align-content-center" style="min-height:55vh">
+        <a href="/Chart/StackedChart"><button class="btn btn-success btn-lg">Stacked Chart</button></a>
+        <a href="/Chart/RadarChart"><button class="btn btn-primary btn-lg">Radar Chart</button></a>
+        <a href="/Chart/MultiSeriesAreaChart"><button class="btn btn-secondary btn-lg">MultiSeriesArea Chart</button></a>
+        <a href="/Chart/SplitPackedBubbleChart"><button class="btn btn-warning btn-lg">SplitPackedBubble Chart</button></a>
+    </div>
 </div>
